[gd_scene load_steps=9 format=2]

[ext_resource path="res://Binary/button.png" type="Texture" id=1]
[ext_resource path="res://Binary/panel_detailed.png" type="Texture" id=2]
[ext_resource path="res://Sounds/Happy beep.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Error beep.wav" type="AudioStream" id=4]
[ext_resource path="res://Fonts/soviet_font_12.tres" type="DynamicFont" id=5]
[ext_resource path="res://output_bar.tscn" type="PackedScene" id=6]
[ext_resource path="res://Binary/Binary.gd" type="Script" id=7]
[ext_resource path="res://Binary/lights.png" type="Texture" id=8]

[node name="Guages" type="Node2D"]
script = ExtResource( 7 )

[node name="panel" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="output_bar" parent="." instance=ExtResource( 6 )]
position = Vector2( 3, 101 )

[node name="load_bar" parent="output_bar" index="0"]
margin_right = 2.0

[node name="output_message" parent="output_bar" index="1"]
visible = false

[node name="row_0" type="Node2D" parent="."]
position = Vector2( 32, 20 )

[node name="light_1" type="Sprite" parent="row_0"]
position = Vector2( 36, 2 )
texture = ExtResource( 8 )
centered = false
hframes = 2

[node name="button" type="Sprite" parent="row_0/light_1"]
position = Vector2( 2, 12 )
texture = ExtResource( 1 )
centered = false
hframes = 2

[node name="button_label" type="Label" parent="row_0/light_1"]
margin_left = -35.0
margin_top = -18.0
margin_right = -26.0
margin_bottom = -4.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.980392, 0.615686, 0.156863, 1 )
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="light_2" type="Sprite" parent="row_0"]
position = Vector2( 18, 2 )
texture = ExtResource( 8 )
centered = false
hframes = 2

[node name="button" type="Sprite" parent="row_0/light_2"]
position = Vector2( 2, 12 )
texture = ExtResource( 1 )
centered = false
hframes = 2

[node name="button_label" type="Label" parent="row_0/light_2"]
margin_left = 1.0
margin_top = -18.0
margin_right = 10.0
margin_bottom = -4.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.980392, 0.615686, 0.156863, 1 )
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="light_4" type="Sprite" parent="row_0"]
position = Vector2( 0, 2 )
texture = ExtResource( 8 )
centered = false
hframes = 2

[node name="button" type="Sprite" parent="row_0/light_4"]
position = Vector2( 2, 12 )
texture = ExtResource( 1 )
centered = false
hframes = 2

[node name="button_label" type="Label" parent="row_0/light_4"]
margin_left = 37.0
margin_top = -18.0
margin_right = 46.0
margin_bottom = -4.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.980392, 0.615686, 0.156863, 1 )
text = "A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="row_1" type="Node2D" parent="."]
position = Vector2( 32, 50 )

[node name="light_1" type="Sprite" parent="row_1"]
position = Vector2( 36, 2 )
texture = ExtResource( 8 )
centered = false
hframes = 2

[node name="light_2" type="Sprite" parent="row_1"]
position = Vector2( 18, 2 )
texture = ExtResource( 8 )
centered = false
hframes = 2

[node name="light_4" type="Sprite" parent="row_1"]
position = Vector2( 0, 2 )
texture = ExtResource( 8 )
centered = false
hframes = 2

[node name="row_2" type="Node2D" parent="."]
position = Vector2( 32, 70 )

[node name="light_1" type="Sprite" parent="row_2"]
position = Vector2( 36, 2 )
texture = ExtResource( 8 )
centered = false
hframes = 2

[node name="light_2" type="Sprite" parent="row_2"]
position = Vector2( 18, 2 )
texture = ExtResource( 8 )
centered = false
hframes = 2

[node name="light_4" type="Sprite" parent="row_2"]
position = Vector2( 0, 2 )
texture = ExtResource( 8 )
centered = false
hframes = 2

[node name="light_8" type="Sprite" parent="row_2"]
position = Vector2( -18, 2 )
texture = ExtResource( 8 )
centered = false
hframes = 2

[node name="error_beep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="happy_beep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[editable path="output_bar"]
